X X
    * Add Pickaxe + Looting = deconstruct (reverse crafting)
    * Add Sword + Fire Protection = return to player when dropped in lava
    * Add Hoe + Power = move time
    * Add Hoe + Bane of Arthropods = toggle downfall
    * Add Bow + Silk Touch = magnetic arrows (transport nearby entity)
    * Improve Pickaxe/Shovel/Axe + Flame = auto-smelt, now drops natural item if unsmeltable
    * Improve Axe + Power = fell tree, now breaks more branches depending on enchantment level
    * Improve Boots + Punch = hover jump, now only jumps when press Shift, not release
    * Improve Boots + Punch = hover jump, now preserves horizontal momentum
    * Fix not ignoring cancelled events (partial fix for ticket 4)
    * Fix new item/enchantments not respecting Unbreaking and not breaking when used up
    * Fix NPE and player disconnect with certain enchantments when using ModLoaderMP (ticket 6)
    * Fix Axe + Power = fell tree, causing a crash in some situations (ticket 3)

2012-02-15  0.5.1a
    * Fix durability destruction bug affecting all pickaxes (ticket 7)
    * Compile against CraftBukkit 1.1-R4

2012-02-13  0.5.1
    * Add Boots + Power = witch's broom (sprint flying)
    * Add Boots + Punch = shift to hover jump
    * Add Boots + Flame = firewalker (set ground on fire)
    * Add Chestplate + Infinity = god mode (no damage)
    * Improve Hoe + Aqua Affinity = auto-hydrate, now can make flowing water stationary
    * Improve Sword + Flame, now creates a lit path (light level 15), no more temp glowstone

2012-02-10  0.3
    * Add Bow + Knockback = pierce blocks
    * Add Shovel + Silk Touch II = harvest fallen snow, fire
    * Add Pickaxe + Silk Touch II = harvest ice
    * Merge functionality of older Sublimation project (add sublimateIce option)
    * Change strike lightning 100+ meters away to Sword + Power (was Sword + Flame)
    * Add Sword + Flame = temporary glowstone headlamp
    * Add Helmet + Fire Aspect = swim in lava